fixed alignment of agree tooltip

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -454,6 +454,17 @@ label {
   line-height: 1.6!important;
   font-size: 16px!important;
 }
+
+.u-agreeButtons {
+  cursor: pointer;
+  color: #ffffff;
+  padding: 0px 12x 0px 1px;
+  font-size: 15px;
+  /* background-color: rgba(131, 101, 158, 0.9); */
+  font-family: 'Montserrat', sans-serif!important;
+  font-weight: lighter!important;
+}
+
 }
 
 .montserrat {
